Inclusão das versões do migrations e estruturação das views

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EreborContext": "Data Source=DESK\\UNIVERSE;Initial Catalog=Erebor;Integrated Security=True;"
+    "EreborContext": "Data Source=LOCALHOST\\deviti;Initial Catalog=Erebor;Integrated Security=True;"
   },
     "Logging": {
       "LogLevel": {
